# app/Http/Middleware/Authenticate.php
@@ -10,8 +10,12 @@ class Authenticate extends Middleware
     /**
      * Get the path the user should be redirected to when they are not authenticated.
      */
-    protected function redirectTo(Request $request): ?string
+    protected function redirectTo($request)
     {
-        return $request->expectsJson() ? null : route('login');
+        if ( !$request->expectsJson() ) {
+            return response()->json([
+                'message' => 'Unauthorized'
+            ],401);
+        }
     }
 }
